--- a/OptionsWindow.xaml
+++ b/OptionsWindow.xaml
@@ -1,13 +1,23 @@
 <Window x:Class="MsgToPdfConverter.OptionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="180" Width="300" WindowStartupLocation="CenterOwner">
+        Title="Options"
+        Height="150"
+        Width="300"
+        WindowStartupLocation="CenterOwner">
     <StackPanel Margin="20">
-        <CheckBox x:Name="ExtractOriginalOnlyCheckBox" Content="Extract original email only" Margin="0,0,0,10"/>
-        <CheckBox x:Name="DeleteMsgAfterConversionCheckBox" Content="Delete .msg after conversion" Margin="0,0,0,20"/>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" Width="60" Margin="0,0,10,0" Click="OkButton_Click"/>
-            <Button Content="Cancel" Width="60" Click="CancelButton_Click"/>
+        <CheckBox x:Name="DeleteMsgAfterConversionCheckBox"
+                Content="Delete .msg after conversion"
+                Margin="0,0,0,20"/>
+        <StackPanel Orientation="Horizontal"
+                HorizontalAlignment="Right">
+            <Button Content="OK"
+                    Width="60"
+                    Margin="0,0,10,0"
+                    Click="OkButton_Click"/>
+            <Button Content="Cancel"
+                    Width="60"
+                    Click="CancelButton_Click"/>
         </StackPanel>
     </StackPanel>
 </Window>
