trying to add binder option try 2

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -68,7 +68,7 @@
                 <Style TargetType="ListBox">
                     <Style.Triggers>
                         <Trigger Property="HasItems"
-                                Value="False">
+                                 Value="False">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate>
@@ -91,12 +91,12 @@
             </ListBox.Style>
         </ListBox>
         <StackPanel Orientation="Horizontal"
-                Grid.Row="4"
-                Margin="0,0,0,10">
+                    Grid.Row="4"
+                    Margin="0,0,0,10">
             <CheckBox Content="Append attachments as PDF at the end"
                       IsChecked="{Binding AppendAttachments}"
                       Margin="0,0,10,0"/>
-            <CheckBox Content="Combine all PDFs into one file"
+            <CheckBox Content="Combine all .msg into one PDF file"
                       IsChecked="{Binding CombineAllPdfs}"
                       Margin="0,0,0,0"/>
         </StackPanel>
