--- a/OptionsWindow.xaml
+++ b/OptionsWindow.xaml
@@ -2,22 +2,56 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Options"
-        Height="150"
-        Width="300"
-        WindowStartupLocation="CenterOwner">
-    <StackPanel Margin="20">
-        <CheckBox x:Name="DeleteMsgAfterConversionCheckBox"
-                Content="Delete .msg after conversion"
-                Margin="0,0,0,20"/>
-        <StackPanel Orientation="Horizontal"
-                HorizontalAlignment="Right">
-            <Button Content="OK"
-                    Width="60"
-                    Margin="0,0,10,0"
-                    Click="OkButton_Click"/>
-            <Button Content="Cancel"
-                    Width="60"
-                    Click="CancelButton_Click"/>
-        </StackPanel>
-    </StackPanel>
+                Height="150"
+                Width="320"
+                WindowStartupLocation="CenterOwner"
+                ResizeMode="NoResize">
+        <Grid Margin="10">
+                <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <CheckBox x:Name="DeleteMsgAfterConversionCheckBox"
+                          Content="Delete .msg after conversion"
+                          Grid.Row="0"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                          Margin="0,0,0,10"/>
+
+                <TextBlock Text="Close button behavior:"
+                           VerticalAlignment="Center"
+                           Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="0,0,8,0"/>
+                <ComboBox x:Name="CloseBehaviorComboBox"
+                          Grid.Row="1"
+                                Grid.Column="1"
+                          Width="150"
+                          SelectedIndex="0"
+                          Margin="0,0,0,10">
+                        <ComboBoxItem Content="Ask"/>
+                        <ComboBoxItem Content="Minimize to tray"/>
+                        <ComboBoxItem Content="Exit"/>
+                </ComboBox>
+
+                <StackPanel Grid.Row="2"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Orientation="Horizontal"
+                                HorizontalAlignment="Center">
+                        <Button Content="OK"
+                                        Width="70"
+                                        Margin="0,0,10,0"
+                                        Click="OkButton_Click"/>
+                        <Button Content="Cancel"
+                                        Width="70"
+                                        Click="CancelButton_Click"/>
+                </StackPanel>
+        </Grid>
 </Window>
