--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -138,36 +138,19 @@
                         Visibility="{Binding IsConverting, Converter={StaticResource BoolToVisibilityConverter}}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
                         Visibility="{Binding ProcessingStatus, Converter={StaticResource StringToVisibilityConverter}}">
-                <!-- Small progress spinner -->
-                <Grid Width="16" Height="16" Margin="0,0,5,0"
-                      Visibility="{Binding IsProcessingFile, Converter={StaticResource BoolToVisibilityConverter}}">
-                    <Ellipse Width="14" Height="14" 
-                             Stroke="Blue" StrokeThickness="2"
-                             Opacity="0.3"/>
-                    <Ellipse Width="14" Height="14" 
-                             Stroke="Blue" StrokeThickness="2"
-                             StrokeDashArray="3,1"
-                             StrokeDashOffset="0">
-                        <Ellipse.RenderTransform>
-                            <RotateTransform CenterX="7" CenterY="7"/>
-                        </Ellipse.RenderTransform>
-                        <Ellipse.Triggers>
-                            <EventTrigger RoutedEvent="Loaded">
-                                <BeginStoryboard>
-                                    <Storyboard RepeatBehavior="Forever">
-                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.Angle"
-                                                         From="0" To="360" Duration="0:0:1"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </EventTrigger>
-                        </Ellipse.Triggers>
-                    </Ellipse>
-                </Grid>
+                <!-- Circular progress indicator -->
+                <local:CircularProgressIndicator Progress="{Binding FileProgressRatio}" 
+                                               Width="20" Height="20" 
+                                               Margin="0,0,8,0"
+                                               VerticalAlignment="Center"
+                                               Visibility="{Binding IsProcessingFile, Converter={StaticResource BoolToVisibilityConverter}}"/>
                 <TextBlock Text="{Binding ProcessingStatus}"
                            FontWeight="Bold"
                            Foreground="Blue"
-                           Margin="0,0,0,10"/>
+                           VerticalAlignment="Center"/>
             </StackPanel>
         </StackPanel>
         <ProgressBar Height="20"
