--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -142,8 +142,8 @@
                         VerticalAlignment="Center"
                         Visibility="{Binding ProcessingStatus, Converter={StaticResource StringToVisibilityConverter}}">
                 <!-- Circular progress indicator -->
-                <local:CircularProgressIndicator Progress="{Binding FileProgressRatio}" 
-                                               Width="20" Height="20" 
+                <local:CircularProgressIndicator Progress="{Binding FileProgressPercentage}" 
+                                               Width="22" Height="22" 
                                                Margin="0,0,8,0"
                                                VerticalAlignment="Center"
                                                Visibility="{Binding IsProcessingFile, Converter={StaticResource BoolToVisibilityConverter}}"/>
