--- a/TrayDropWindow.xaml
+++ b/TrayDropWindow.xaml
@@ -1,12 +1,16 @@
+
 <Window x:Class="MsgToPdfConverter.TrayDropWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Drop Here" Height="110" Width="240"
-        WindowStyle="None" AllowsTransparency="True" Background="#FF2222AA"
+        WindowStyle="None" AllowsTransparency="True" Background="Transparent"
         Topmost="True" ShowInTaskbar="False" ResizeMode="NoResize"
         AllowDrop="True">
     <Grid>
-        <Border CornerRadius="10" Background="#AA333333" BorderBrush="#FFAAAAAA" BorderThickness="2">
+        <Border CornerRadius="10"
+                Background="#AA0057A6"
+                BorderBrush="#FFC72C"
+                BorderThickness="4">
             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                 <TextBlock Text="Drop files here" Foreground="White" FontSize="16" HorizontalAlignment="Center"/>
                 <TextBlock TextWrapping="Wrap" TextAlignment="Center" Width="200"
