--- a/OptionsWindow.xaml
+++ b/OptionsWindow.xaml
@@ -2,56 +2,68 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Options"
-                Height="150"
-                Width="320"
-                WindowStartupLocation="CenterOwner"
-                ResizeMode="NoResize">
-        <Grid Margin="10">
-                <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+        Height="200"
+        Width="400"
+        MinHeight="200"
+        MinWidth="350"
+        WindowStartupLocation="CenterOwner"
+        ResizeMode="NoResize">
+        <Grid Margin="16">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-                <CheckBox x:Name="DeleteFilesAfterConversionCheckBox"
-                          Content="Delete files after conversion"
-                          Grid.Row="0"
-                                Grid.Column="0"
-                                Grid.ColumnSpan="2"
-                          Margin="0,0,0,10"/>
+            <CheckBox x:Name="DeleteFilesAfterConversionCheckBox"
+                      Content="Delete files after conversion"
+                      Grid.Row="0"
+                      Grid.Column="0"
+                      Grid.ColumnSpan="2"
+                      Margin="0,0,0,12"/>
 
-                <TextBlock Text="Close button behavior:"
-                           VerticalAlignment="Center"
-                           Grid.Row="1"
-                                Grid.Column="0"
-                                Margin="0,0,8,0"/>
-                <ComboBox x:Name="CloseBehaviorComboBox"
-                          Grid.Row="1"
-                                Grid.Column="1"
-                          Width="150"
-                          SelectedIndex="0"
-                          Margin="0,0,0,10">
-                        <ComboBoxItem Content="Ask"/>
-                        <ComboBoxItem Content="Minimize to tray"/>
-                        <ComboBoxItem Content="Exit"/>
+            <TextBlock Text="Close button behavior:"
+                       VerticalAlignment="Center"
+                       Grid.Row="1"
+                       Grid.Column="0"
+                       Margin="0,0,8,0"/>
+            <ComboBox x:Name="CloseBehaviorComboBox"
+                      Grid.Row="1"
+                      Grid.Column="1"
+                      Width="180"
+                      SelectedIndex="0"
+                      Margin="0,0,0,12">
+                <ComboBoxItem Content="Ask"/>
+                <ComboBoxItem Content="Minimize to tray"/>
+                <ComboBoxItem Content="Exit"/>
                 </ComboBox>
 
-                <StackPanel Grid.Row="2"
-                                Grid.Column="0"
-                                Grid.ColumnSpan="2"
-                                Orientation="Horizontal"
-                                HorizontalAlignment="Center">
-                        <Button Content="OK"
-                                        Width="70"
-                                        Margin="0,0,10,0"
-                                        Click="OkButton_Click"/>
-                        <Button Content="Cancel"
-                                        Width="70"
-                                        Click="CancelButton_Click"/>
-                </StackPanel>
+            <CheckBox x:Name="EnableContextMenuCheckBox"
+                      Content="Add 'Add to MsgToPDF list' to right-click menu"
+                      Grid.Row="2"
+                      Grid.Column="0"
+                      Grid.ColumnSpan="2"
+                      Margin="0,0,0,16"/>
+
+            <StackPanel Grid.Row="4"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        Margin="0,12,0,0">
+                <Button Content="OK"
+                        Width="80"
+                        Margin="0,0,8,0"
+                        Click="OkButton_Click"/>
+                <Button Content="Cancel"
+                        Width="80"
+                        Click="CancelButton_Click"/>
+            </StackPanel>
         </Grid>
 </Window>
